#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-01-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999982 released.

        * Fixed installation of mozrepl in Makefile.PL.

        * Added code to correctly handle password in
          FullAuto.pm.


2013-01-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999981 released.

        * Fixed changing permissions on /var for cygwin.


2013-01-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999980 released.

        * Added Berkeley DB recover when new process discovers
          older process with deadlock.


2013-01-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999979 released.

        * Removed sudo from BerkeleyDB install in Makefile.PL


2013-01-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999978 released.

        * Added lines to change /var to proper permissions
          in Makefile.PL.

        * Added file test for Firefox extensions directory.

        * Added null to define $login_id in getpasswd.


2013-01-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999977 released.

        * Fixed Firefox download in Makefile.PL.


2013-01-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999976 released.

        * New code for permissions in Makefile.PL.


2013-01-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999975 released.

        * Added temp code for permissions in Makefile.PL.


2013-01-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999974 released.
