@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999982';
+our $VERSION='0.999983';
 
 
 use 5.005;
