@@ -19,6 +19,15 @@
 ################################################################
 
 
+2013-01-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999983 released.
+
+        * Fixed installation of mozrepl in Makefile.PL.
+
+        * Added gbp lookup for mirror().
+
+
 2013-01-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999982 released.
